Fix Portaudio linkage, update dependencies